crates/cifmt-cli/tests/cli/snapshots/cli__version__version@output_format=json##verbosity=0.snap
---
source: crates/cifmt-cli/tests/cli/version.rs
expression: "cmd.arg(\"--output-format\").arg(output_format).args(iter::repeat_n(\"-v\",\nverbosity))"
---
Success: true
Exit Code: 0
--- STDOUT ---
{
  "version": [<int>, <int>, <int>],
  "commit_info": {
    "short_commit_hash": "[SHORT_HASH]",
    "commit_hash": "[HASH]",
    "commit_date": "2026-01-18",
    "tag": "[TAG]",
    "tag_distance": "[DISTANCE]"
  }
}

--- STDERR ---
