crates/cifmt-cli/tests/cli/snapshots/cli__version__version@output_format=json##verbosity=2.snap
---
source: crates/cifmt-cli/tests/cli/version.rs
expression: "cmd.arg(\"--output-format\").arg(output_format).args(iter::repeat_n(\"-v\",\nverbosity))"
---
Success: true
Exit Code: 0
--- STDOUT ---
{
  "version": [<int>, <int>, <int>],
  "commit_info": {
    "short_commit_hash": "[SHORT_HASH]",
    "commit_hash": "[HASH]",
    "commit_date": "[DATE]",
    "tag": "[TAG]",
    "tag_distance": "[DISTANCE]"
  }
}

--- STDERR ---
[2m[TIME][0m [34mDEBUG[0m [2mcifmt::logging[0m[2m:[0m [2m52:[0m Tracing initialized with verbosity level 2
[2m[TIME][0m [32m INFO[0m [1mexecute[0m[2m:[0m [2mcifmt::commands::version[0m[2m:[0m [2m18:[0m enter
[2m[TIME][0m [32m INFO[0m [1mexecute[0m[2m:[0m [2mcifmt::commands::version[0m[2m:[0m [2m18:[0m close [3mtime.busy[0m[2m=[0m[TIME] [3mtime.idle[0m[2m=[0m[TIME]
