crates/cifmt-cli/tests/cli/snapshots/cli__version__version@output_format=text##verbosity=1.snap
---
source: crates/cifmt-cli/tests/cli/version.rs
expression: "cmd.arg(\"--output-format\").arg(output_format).args(iter::repeat_n(\"-v\",\nverbosity))"
---
Success: true
Exit Code: 0
--- STDOUT ---
[VERSION] ([HASH] [DATE])

--- STDERR ---
